Fixed video iframe height issue and handled some extra spacings and icon list grid

--- a/src/app/pages/features/items/item-details/item-details.page.scss
+++ b/src/app/pages/features/items/item-details/item-details.page.scss
@@ -75,7 +75,7 @@ pdf-viewer {
 }
 
 iframe {
-  height: 420px !important;
+  height: 177px !important;
 }
 
 //new sttyling
